# unam-compilers

./: .gitignore  Makefile  README.md
1_regex_to_nfa/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
2_nfa_to_dfa/: Paolo_Flores_NFA_to_DFA.ipynb
3_flex/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  scanner  scanner.c  scanner.h  scanner.l  symtable.c  symtable.h
4_first_follow/: .gitignore  CMakeLists.txt  Dockerfile  README.md  analyzer.c  docker-compose.yml  grammar.c  grammar.h  main.c
5_lalr1_parser/: CMakeLists.txt  README.md  derivation_tree.dot  lalr1_solved.xopp  table.json
5_lalr1_parser/part_1/: README.md  grammar.txt  run_tests.sh
5_lalr1_parser/part_1/test_inputs/: input_01_accept.txt  input_01_reject.txt  input_02_accept.txt  input_02_reject.txt  input_03.txt  input_03_accept.txt  input_03_reject.txt  input_04.txt  input_05.txt  input_06.txt  input_08.txt  input_09.txt
5_lalr1_parser/part_2/: README.txt
5_lalr1_parser/part_3/: Cargo.toml  README.md
5_lalr1_parser/part_3/src/: lexer.rs  main.rs  parser.rs  tokens.rs
5_lalr1_parser/report/: main.typ  template.typ
5_lalr1_parser/src/: analyzer.c  automaton.c  dot_generator.c  dot_generator.h  grammar.c  grammar.h  main.c  parser.c  parser.h  scanner.h  scanner.l  tree.c  tree.h
6_semantics/: DESIGN.md  Dockerfile  Makefile  README.md  analyzer.c  analyzer.h  ast.h  lexer.l  parser.y  run_tests.sh
7_type_checking/: .gitignore  Makefile  README.md  analyzer.c  analyzer.h  ast.c  ast.h  builtins.c  builtins.h  darray.h  debug.h  lexer.l  (+2 more)
(+92 files in other folders)
